# url_shortener

./: .env.example  .gitignore  README.md  alembic.ini.example  pyproject.toml
app/: config.py  main.py  schemas.py
app/database/: db.py  dependencies.py  models.py
app/migrations/: env.py
app/migrations/versions/: 584d40607cec_initial_migration.py  9ae319815894_true_nullable_in_url_user_id.py  9b6330f40953_initial_migration_2.py
