[project]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "Zakhar",email = "zzhurlov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "url_shortener", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
